ProyectoFinal/MatrixLanguageParser.java
// Generated from MatrixLanguage.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MatrixLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, IDENTIFIER=19, NUMBER=20, WHITESPACE=21, COMMENT=22, TEXT=23;
	public static final int
		RULE_program = 0, RULE_instructions = 1, RULE_instruction = 2, RULE_var_declaration = 3, 
		RULE_list = 4, RULE_type = 5, RULE_assignation = 6, RULE_expression = 7, 
		RULE_addition = 8, RULE_subtraction = 9, RULE_product = 10, RULE_matrix_declare = 11, 
		RULE_matrix_assignation = 12, RULE_write = 13, RULE_printM = 14, RULE_matrix = 15, 
		RULE_lines = 16, RULE_line = 17, RULE_tk_main = 18, RULE_tk_int = 19, 
		RULE_tk_matrix = 20, RULE_tk_id = 21, RULE_tk_number = 22, RULE_tk_print_matrix = 23, 
		RULE_tk_write = 24, RULE_tk_semicolon = 25, RULE_tk_comma = 26, RULE_tk_open_brace = 27, 
		RULE_tk_close_brace = 28, RULE_tk_open_par = 29, RULE_tk_close_par = 30, 
		RULE_tk_open_bracket = 31, RULE_tk_close_bracket = 32, RULE_tk_assign = 33, 
		RULE_tk_add = 34, RULE_tk_subtract = 35, RULE_tk_product = 36, RULE_tk_inverse = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "instructions", "instruction", "var_declaration", "list", 
			"type", "assignation", "expression", "addition", "subtraction", "product", 
			"matrix_declare", "matrix_assignation", "write", "printM", "matrix", 
			"lines", "line", "tk_main", "tk_int", "tk_matrix", "tk_id", "tk_number", 
			"tk_print_matrix", "tk_write", "tk_semicolon", "tk_comma", "tk_open_brace", 
			"tk_close_brace", "tk_open_par", "tk_close_par", "tk_open_bracket", "tk_close_bracket", 
			"tk_assign", "tk_add", "tk_subtract", "tk_product", "tk_inverse"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'main'", "'int'", "'matrix'", "'printM'", "'write'", "';'", "','", 
			"'{'", "'}'", "'('", "')'", "'['", "']'", "'='", "'+'", "'-'", "'*'", 
			"'^'", null, null, null, "'//'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "IDENTIFIER", "NUMBER", "WHITESPACE", 
			"COMMENT", "TEXT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MatrixLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MatrixLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Tk_mainContext tk_main() {
			return getRuleContext(Tk_mainContext.class,0);
		}
		public Tk_open_braceContext tk_open_brace() {
			return getRuleContext(Tk_open_braceContext.class,0);
		}
		public InstructionsContext instructions() {
			return getRuleContext(InstructionsContext.class,0);
		}
		public Tk_close_braceContext tk_close_brace() {
			return getRuleContext(Tk_close_braceContext.class,0);
		}
		public Tk_semicolonContext tk_semicolon() {
			return getRuleContext(Tk_semicolonContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			tk_main();
			setState(77);
			tk_open_brace();
			setState(78);
			instructions();
			setState(79);
			tk_close_brace();
			setState(80);
			tk_semicolon();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionsContext extends ParserRuleContext {
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public InstructionsContext instructions() {
			return getRuleContext(InstructionsContext.class,0);
		}
		public InstructionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instructions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).enterInstructions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).exitInstructions(this);
		}
	}

	public final InstructionsContext instructions() throws RecognitionException {
		InstructionsContext _localctx = new InstructionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instructions);
		try {
			setState(86);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				instruction();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				instruction();
				setState(84);
				instructions();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public Var_declarationContext var_declaration() {
			return getRuleContext(Var_declarationContext.class,0);
		}
		public Tk_semicolonContext tk_semicolon() {
			return getRuleContext(Tk_semicolonContext.class,0);
		}
		public AssignationContext assignation() {
			return getRuleContext(AssignationContext.class,0);
		}
		public WriteContext write() {
			return getRuleContext(WriteContext.class,0);
		}
		public Matrix_declareContext matrix_declare() {
			return getRuleContext(Matrix_declareContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).exitInstruction(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instruction);
		try {
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
			case NUMBER:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				var_declaration();
				setState(89);
				tk_semicolon();
				}
				break;
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				assignation();
				setState(92);
				tk_semicolon();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				setState(94);
				write();
				setState(95);
				tk_semicolon();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 4);
				{
				setState(97);
				matrix_declare();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declarationContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public Var_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).enterVar_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).exitVar_declaration(this);
		}
	}

	public final Var_declarationContext var_declaration() throws RecognitionException {
		Var_declarationContext _localctx = new Var_declarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_var_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			type();
			setState(101);
			list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListContext extends ParserRuleContext {
		public Tk_idContext tk_id() {
			return getRuleContext(Tk_idContext.class,0);
		}
		public Tk_commaContext tk_comma() {
			return getRuleContext(Tk_commaContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).exitList(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_list);
		try {
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				tk_id();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				tk_id();
				setState(105);
				tk_comma();
				setState(106);
				list();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Tk_numberContext tk_number() {
			return getRuleContext(Tk_numberContext.class,0);
		}
		public Tk_matrixContext tk_matrix() {
			return getRuleContext(Tk_matrixContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type);
		try {
			setState(112);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMBER:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				tk_number();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				tk_matrix();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignationContext extends ParserRuleContext {
		public Tk_idContext tk_id() {
			return getRuleContext(Tk_idContext.class,0);
		}
		public Tk_assignContext tk_assign() {
			return getRuleContext(Tk_assignContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).enterAssignation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).exitAssignation(this);
		}
	}

	public final AssignationContext assignation() throws RecognitionException {
		AssignationContext _localctx = new AssignationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assignation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			tk_id();
			setState(115);
			tk_assign();
			setState(116);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public Tk_numberContext tk_number() {
			return getRuleContext(Tk_numberContext.class,0);
		}
		public MatrixContext matrix() {
			return getRuleContext(MatrixContext.class,0);
		}
		public Tk_idContext tk_id() {
			return getRuleContext(Tk_idContext.class,0);
		}
		public AdditionContext addition() {
			return getRuleContext(AdditionContext.class,0);
		}
		public SubtractionContext subtraction() {
			return getRuleContext(SubtractionContext.class,0);
		}
		public ProductContext product() {
			return getRuleContext(ProductContext.class,0);
		}
		public Tk_inverseContext tk_inverse() {
			return getRuleContext(Tk_inverseContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_expression);
		try {
			setState(127);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				tk_number();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				matrix();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(120);
				tk_id();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(121);
				addition();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(122);
				subtraction();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(123);
				product();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(124);
				tk_inverse();
				setState(125);
				expression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AdditionContext extends ParserRuleContext {
		public List<Tk_numberContext> tk_number() {
			return getRuleContexts(Tk_numberContext.class);
		}
		public Tk_numberContext tk_number(int i) {
			return getRuleContext(Tk_numberContext.class,i);
		}
		public Tk_addContext tk_add() {
			return getRuleContext(Tk_addContext.class,0);
		}
		public AdditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).enterAddition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).exitAddition(this);
		}
	}

	public final AdditionContext addition() throws RecognitionException {
		AdditionContext _localctx = new AdditionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_addition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			tk_number();
			setState(130);
			tk_add();
			setState(131);
			tk_number();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubtractionContext extends ParserRuleContext {
		public List<Tk_numberContext> tk_number() {
			return getRuleContexts(Tk_numberContext.class);
		}
		public Tk_numberContext tk_number(int i) {
			return getRuleContext(Tk_numberContext.class,i);
		}
		public Tk_subtractContext tk_subtract() {
			return getRuleContext(Tk_subtractContext.class,0);
		}
		public SubtractionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subtraction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).enterSubtraction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).exitSubtraction(this);
		}
	}

	public final SubtractionContext subtraction() throws RecognitionException {
		SubtractionContext _localctx = new SubtractionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_subtraction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			tk_number();
			setState(134);
			tk_subtract();
			setState(135);
			tk_number();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProductContext extends ParserRuleContext {
		public List<Tk_numberContext> tk_number() {
			return getRuleContexts(Tk_numberContext.class);
		}
		public Tk_numberContext tk_number(int i) {
			return getRuleContext(Tk_numberContext.class,i);
		}
		public Tk_productContext tk_product() {
			return getRuleContext(Tk_productContext.class,0);
		}
		public ProductContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_product; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).enterProduct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).exitProduct(this);
		}
	}

	public final ProductContext product() throws RecognitionException {
		ProductContext _localctx = new ProductContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_product);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			tk_number();
			setState(138);
			tk_product();
			setState(139);
			tk_number();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Matrix_declareContext extends ParserRuleContext {
		public List<Tk_open_bracketContext> tk_open_bracket() {
			return getRuleContexts(Tk_open_bracketContext.class);
		}
		public Tk_open_bracketContext tk_open_bracket(int i) {
			return getRuleContext(Tk_open_bracketContext.class,i);
		}
		public List<Tk_numberContext> tk_number() {
			return getRuleContexts(Tk_numberContext.class);
		}
		public Tk_numberContext tk_number(int i) {
			return getRuleContext(Tk_numberContext.class,i);
		}
		public List<Tk_close_bracketContext> tk_close_bracket() {
			return getRuleContexts(Tk_close_bracketContext.class);
		}
		public Tk_close_bracketContext tk_close_bracket(int i) {
			return getRuleContext(Tk_close_bracketContext.class,i);
		}
		public Matrix_declareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matrix_declare; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).enterMatrix_declare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).exitMatrix_declare(this);
		}
	}

	public final Matrix_declareContext matrix_declare() throws RecognitionException {
		Matrix_declareContext _localctx = new Matrix_declareContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_matrix_declare);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			tk_open_bracket();
			setState(142);
			tk_number();
			setState(143);
			tk_close_bracket();
			setState(144);
			tk_open_bracket();
			setState(145);
			tk_number();
			setState(146);
			tk_close_bracket();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Matrix_assignationContext extends ParserRuleContext {
		public Tk_idContext tk_id() {
			return getRuleContext(Tk_idContext.class,0);
		}
		public Tk_assignContext tk_assign() {
			return getRuleContext(Tk_assignContext.class,0);
		}
		public MatrixContext matrix() {
			return getRuleContext(MatrixContext.class,0);
		}
		public Matrix_assignationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matrix_assignation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).enterMatrix_assignation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).exitMatrix_assignation(this);
		}
	}

	public final Matrix_assignationContext matrix_assignation() throws RecognitionException {
		Matrix_assignationContext _localctx = new Matrix_assignationContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_matrix_assignation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			tk_id();
			setState(149);
			tk_assign();
			setState(150);
			matrix();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WriteContext extends ParserRuleContext {
		public Tk_writeContext tk_write() {
			return getRuleContext(Tk_writeContext.class,0);
		}
		public Tk_idContext tk_id() {
			return getRuleContext(Tk_idContext.class,0);
		}
		public WriteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_write; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).enterWrite(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).exitWrite(this);
		}
	}

	public final WriteContext write() throws RecognitionException {
		WriteContext _localctx = new WriteContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_write);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			tk_write();
			setState(153);
			tk_id();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintMContext extends ParserRuleContext {
		public Tk_print_matrixContext tk_print_matrix() {
			return getRuleContext(Tk_print_matrixContext.class,0);
		}
		public Tk_matrixContext tk_matrix() {
			return getRuleContext(Tk_matrixContext.class,0);
		}
		public PrintMContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printM; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).enterPrintM(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).exitPrintM(this);
		}
	}

	public final PrintMContext printM() throws RecognitionException {
		PrintMContext _localctx = new PrintMContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_printM);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			tk_print_matrix();
			setState(156);
			tk_matrix();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MatrixContext extends ParserRuleContext {
		public Tk_open_bracketContext tk_open_bracket() {
			return getRuleContext(Tk_open_bracketContext.class,0);
		}
		public LinesContext lines() {
			return getRuleContext(LinesContext.class,0);
		}
		public Tk_close_bracketContext tk_close_bracket() {
			return getRuleContext(Tk_close_bracketContext.class,0);
		}
		public MatrixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matrix; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).enterMatrix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).exitMatrix(this);
		}
	}

	public final MatrixContext matrix() throws RecognitionException {
		MatrixContext _localctx = new MatrixContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_matrix);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			tk_open_bracket();
			setState(159);
			lines();
			setState(160);
			tk_close_bracket();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinesContext extends ParserRuleContext {
		public LineContext line() {
			return getRuleContext(LineContext.class,0);
		}
		public Tk_semicolonContext tk_semicolon() {
			return getRuleContext(Tk_semicolonContext.class,0);
		}
		public LinesContext lines() {
			return getRuleContext(LinesContext.class,0);
		}
		public LinesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lines; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MatrixLanguageListener ) ((MatrixLanguageListener)listener).enterLines(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
